--- a/.github/workflows/scratch.yml
+++ b/.github/workflows/scratch.yml
@@ -1,12 +1,10 @@
-name: CI
+name: Update project
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    paths: [ ".github/" ]
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
