--- a/.github/workflows/scratch.yml
+++ b/.github/workflows/scratch.yml
@@ -4,29 +4,38 @@ on:
   push:
     branches: [ "master" ]
     paths: [ ".github/" ]
-
-
-  # Allows you to run this workflow manually from the Actions tab
+  schedule: 
+    - cron: "0 * * * *"
   workflow_dispatch:
+    inputs:
+      version:
+        description: "Version"
+        required: false
+        type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+env:
+  PROJECT_URL: "https://scratch.mit.edu/projects/510186917/"
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  fetch:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - id: setup
+        name: Setup Node
+        uses: actions/setup-node@v3.4.1
+        
+      - id: install
+        name: Install SBDL
+        run: npm install --global @turbowarp/sbdl
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - id: download 
+        name: Download
+        run: wget 
+        
+  push:
+    needs: fetch
+    runs-on: ubuntu-latest
+  release:
+    needs: push
+    if: "${{ github.event.inputs.version != '' }}"
+    runs-on: ubuntu-latest
